[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cybertraceai-ops"
version = "0.1.0"
description = "AI agent for network management through natural language interactions"
readme = "README.md"
authors = [
    {name = "Luis Poveda", email = "luis.poveda@cybertraceai.com"},
]
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
    "langchain-core>=0.3.28",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.52",
    "langgraph-checkpoint>=2.0.5",
    "langgraph-cli>=0.1.58",
    "chainlit>=1.3.0",
    "ollama>=0.3.3",
    "python-dotenv>=1.0.0",
    "langchain-mcp-adapters==0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.hatch.build.targets.wheel]
packages = ["."] 