[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cybertraceai-ops"
version = "0.1.0"
description = "AI agent for network observability through natural language interactions"
readme = "README.md"
authors = [
    {name = "Luis Poveda", email = "luis.poveda@cybertraceai.com"},
]
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.57",
    "langchain-ollama>=0.3.1",
    "langchain-openai>=0.3.15",
    "langgraph>=0.3.27",
    "langgraph-checkpoint>=2.0.24",
    "langgraph-cli>=0.1.89",
    "chainlit>=2.4.400",
    "ollama>=0.4.7",
    "python-dotenv>=1.1.0",
    "langchain-mcp-adapters==0.0.7",
    "asyncpg==0.30.0",
    "pandas==2.2.3",
    "mcp==1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.hatch.build.targets.wheel]
packages = ["."] 